# dataprophet

./: README.md  analyser.py  app.py  pyproject.toml  requirements.txt
