[project]
name = "analyser"
version = "0.0.1"
authors = [
  { name="Mukundi Mphaphuli" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
